{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b559cd3f-5b09-42e8-80d0-ba67facb9e35",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9b7d9bba-bc19-4ee5-9780-0d0346464b4d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "d232f42c-a9a3-423c-9556-ca469ba6b9d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Light",
                    "type": "Value",
                    "id": "63d522d5-39cd-448b-acc8-398641d126e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeDroit",
                    "type": "Value",
                    "id": "029451f2-8c9b-49df-8dc1-a86707de1cde",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeGauche",
                    "type": "Value",
                    "id": "1e7fb4ed-93b1-4d49-a591-a93722920a27",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PoseLum",
                    "type": "Value",
                    "id": "aafaa8fc-5647-469c-993d-f9dfaeacd7a3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "RetireLum",
                    "type": "Value",
                    "id": "5f71e496-49ef-45ff-89e3-08cd0fba87b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DirectionLum",
                    "type": "Value",
                    "id": "b36aa476-df8b-4443-b348-4d601eb62a80",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ecd6d9f7-8486-4294-b5b7-26fc42f983f7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dde04550-c41f-419b-9aec-251688167ef6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1836ad8e-bc1a-4c7c-b725-7a760091dbe6",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Light",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77091945-c59a-4821-b971-0557b07336e2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeDroit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "877d3d6b-c861-4278-8cd8-d043da0ff817",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGauche",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45ea6515-428e-48f3-a992-ca8b66ea52cc",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PoseLum",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fd24065-3ef9-4227-af23-9342e8a2bdc7",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RetireLum",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b510f717-c9df-4ffe-86ff-e1cb18c50898",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DirectionLum",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}